[package]
name = "lidar-odom"
version = "0.1.0"
edition = "2021"

[dependencies]
nalgebra = "0.33.2"
rerun = "0.21.0"
rplidar_drv = { git = "https://github.com/RandomStudio/rplidar.rs.git", branch = "update-min" }
serde = { version = "1.0.216", features = ["derive"] }
serde_json = "1.0.134"
serialport = "4.6.1"
tokio = { version = "1.42.0", features = ["full"] }
zenoh = "1.1.0"
